--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Riešič rovníc</title>
+	<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="solver.js"></script>
+	<script type="text/javascript" src="ui.js"></script>
 </head>
 <body>
 	a: <input type="number" id="a">
