Added simple styling

--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html>
 <head>
 	<title>Riešič rovníc</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="solver.js"></script>
 	<script type="text/javascript" src="ui.js"></script>
 </head>
 <body>
-	a: <input type="number" id="a">
-	b: <input type="number" id="b">
-	c: <input type="number" id="c">
+	<div class="var-entry">
+		a: <input type="number" id="a">
+	</div>
+	<div class="var-entry">
+		b: <input type="number" id="b">
+	</div>
+	<div class="var-entry">
+		c: <input type="number" id="c">
+	</div>
 	<h1>Výsledky</h1>
 	x1: <span id="x1"></span><br>
 	x2: <span id="x2"></span>
