--- a/index.html
+++ b/index.html
@@ -8,15 +8,32 @@
 	<script type="text/javascript" src="ui.js"></script>
 </head>
 <body>
-	<div class="var-entry">
-		a: <input type="number" id="a">
-	</div>
-	<div class="var-entry">
-		b: <input type="number" id="b">
-	</div>
-	<div class="var-entry">
-		c: <input type="number" id="c">
-	</div>
+	<table>
+		<tr class="var-entry">
+			<td class="label">
+				a: 
+			</td>
+			<td>
+				<input type="number" id="a">
+			</tr>
+		</tr>
+		<tr class="var-entry">
+			<td class="label">
+				b: 
+			</td>
+			<td>
+				<input type="number" id="b">
+			</tr>
+		</tr>
+		<tr class="var-entry">
+			<td class="label">
+				c: 
+			</td>
+			<td>
+				<input type="number" id="c">
+			</tr>
+		</tr>
+	</table>
 	<h1>Výsledky</h1>
 	x1: <span id="x1"></span><br>
 	x2: <span id="x2"></span>
