Moved JavaScript to js/

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Riešič rovníc</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
-	<script type="text/javascript" src="solver.js"></script>
-	<script type="text/javascript" src="ui.js"></script>
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="js/solver.js"></script>
+	<script type="text/javascript" src="js/ui.js"></script>
 </head>
 <body>
 	<table>
