--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html manifest="cache.manifest">
 <head>
 	<title>Riešič rovníc</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="js/solver.js"></script>
